--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
           <p>
             WithCodeは、プログラミング学習者がスキル向上を目指すべく創設されたコミュニティです。多くの優秀な現役エンジニアをメンターとして迎え入れましたので、日々の学習の中で生じた疑問/質問を気軽に相談できる環境を提供します。また、週に一度の勉強会や、メンバー同士の交流を促す企画なども多数ご用意しております。
           </p>
-
         </div>
         <div class="feature_bg">
          <ul class="feature_img">
@@ -122,7 +121,41 @@
        <img src="img/top_recruit.png" alt="リクルート画像">
        <div class="recruit_bg"></div>
      </section>
+     <section class="contact">
+       <div class="contact_inner">
+         <h3>Contact<br><small>お問い合わせ</small></h3>
+         <P>ご質問などありましたら、お問い合わせフォームにて<br>
+           お気軽にお問い合わせください。
+         </P>
+         <p class="btn"><a href="#">お問い合わせ</a></p>
+       </div>
+     </section>
     </main>
+    <footer>
+      <div class="footer_inner">
+        <img src="img/logo.png" alt="ロゴ画像">
+        <p>
+          〒〇〇〇-〇〇〇〇<br>
+          〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇<br>
+          TEL 〇〇-〇〇〇〇-〇〇〇〇
+        </p>
+      </div>
+      </div>
+      <div class="footer_bg">
+        <div class="footer_list">
+          <ul>
+            <li><a href="html/company.html">会社概要</a></li>
+            <li><a href="html/news.html">お知らせ</a></li>
+          </ul>
+          <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="html/business.html">事業内容</a></li>
+            <li><a href="html/recruit.html">採用情報</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <p class="copyright">© 2021 WithCode+</p>
   </body>
 
 </html>
