--- a/html/news.html
+++ b/html/news.html
@@ -68,6 +68,7 @@
             </li>
           </ul>
         </div>
+        <div class="news_side">
         <div class="news_side_link">
           <p>最近の記事</p>
           <ul class="news_side_list">
@@ -91,6 +92,7 @@
             <li><a href="">〇〇〇〇年〇〇月</a></li>
           </ul>
         </div>
+       </div>
       </div>
     </section>
     <section class="contact">
