タイトル-修正-

--- a/html/business.html
+++ b/html/business.html
@@ -58,7 +58,7 @@
             <h1>IT教育事業<br><small>IT education</small></h1>
             <h2>最高の学習環境を提供する。</h2>
             <p>
-              エンジニアコミュニティ【WithCode】では、プログラミングを学習している方々がより学びやすい環境を提供します。 日々の学習に関する相談/エラーに関する質問対応/模擬案件の提供など、プログラミング学習に関する手厚いサポートを
+              エンジニアコミュニティ【FutureCode】では、プログラミングを学習している方々がより学びやすい環境を提供します。 日々の学習に関する相談/エラーに関する質問対応/模擬案件の提供など、プログラミング学習に関する手厚いサポートを
               提供しています。
             </p>
           </div>
@@ -85,7 +85,7 @@
             <h1>IT教育事業<br><small>IT education</small></h1>
             <h2>最高の学習環境を提供する。</h2>
             <p>
-              エンジニアコミュニティ【WithCode】では、プログラミングを学習している方々がより学びやすい環境を提供します。 日々の学習に関する相談/エラーに関する質問対応/模擬案件の提供など、プログラミング学習に関する手厚いサポートを
+              エンジニアコミュニティ【FutureCode】では、プログラミングを学習している方々がより学びやすい環境を提供します。 日々の学習に関する相談/エラーに関する質問対応/模擬案件の提供など、プログラミング学習に関する手厚いサポートを
               提供しています。
             </p>
           </div>
@@ -112,7 +112,7 @@
             <h1>IT教育事業<br><small>IT education</small></h1>
             <h2>最高の学習環境を提供する。</h2>
             <p>
-              エンジニアコミュニティ【WithCode】では、プログラミングを学習している方々がより学びやすい環境を提供します。 日々の学習に関する相談/エラーに関する質問対応/模擬案件の提供など、プログラミング学習に関する手厚いサポートを
+              エンジニアコミュニティ【FutureCode】では、プログラミングを学習している方々がより学びやすい環境を提供します。 日々の学習に関する相談/エラーに関する質問対応/模擬案件の提供など、プログラミング学習に関する手厚いサポートを
               提供しています。
             </p>
           </div>
@@ -135,12 +135,12 @@
     </section>
     <section class="letter section">
       <div class="letter_inner">
-        <h1>WithCode+</h1>
+        <h1>FutureCode+</h1>
         <div class="letter_list">
           <h2>業界初の試み<br><small>Industry's Frist Trying</small></h2>
           <div class="letter_item">
             <p>
-              プログラミング学習教材【WithCode+】では、アウトプットに比重を置いた学習教材を提供します。プログラミング学習に関して最も重要なことは「アウトプット」です。ご自身で計画（Plan）し、WithCode+の教材でアウトプット（Do）をする。そこから課題を発見（Check）し、解決する（Action）というPDCAサイクルを高速で回すことで初めてプログラミングスキルを習得することができます。現状のプログラミングスクールが提供している教材ではアウトプットの量が少なすぎます。本課題を補うべく、WithCode+ではアウトプットに比重を置いた教材を提供します。また、プログラミング業界の平均価格よりも大幅な低価格で提供することで、プログラミング業界に革命を起こします。
+              プログラミング学習教材【FutureCode+】では、アウトプットに比重を置いた学習教材を提供します。プログラミング学習に関して最も重要なことは「アウトプット」です。ご自身で計画（Plan）し、FutureCode+の教材でアウトプット（Do）をする。そこから課題を発見（Check）し、解決する（Action）というPDCAサイクルを高速で回すことで初めてプログラミングスキルを習得することができます。現状のプログラミングスクールが提供している教材ではアウトプットの量が少なすぎます。本課題を補うべく、FutureCode+ではアウトプットに比重を置いた教材を提供します。また、プログラミング業界の平均価格よりも大幅な低価格で提供することで、プログラミング業界に革命を起こします。
             </p>
             <p><img src="../img/business_letter.png" alt="レター画像"></p>
           </div>
@@ -179,6 +179,6 @@
        </div>
      </div>
    </footer>
-   <p class="copyright">© 2021 WithCode+</p>
+   <p class="copyright">© 2021 FutureCode+</p>
  </body>
 </html>
