--- a/html/company.html
+++ b/html/company.html
@@ -126,6 +126,6 @@
       </div>
     </div>
   </footer>
-  <p class="copyright">© 2021 WithCode+</p>
+  <p class="copyright">© 2021 FutureCode+</p>
 </body>
 </html>
