--- a/html/news.html
+++ b/html/news.html
@@ -49,22 +49,22 @@
             <li>
               <span class="news_date">〇〇〇〇.〇〇.〇〇</span>
               <p class="news_category">TOPICS</p>
-              <a href="#" class="news_ttl">［WithCode］サービスリリース</a>
+              <a href="#" class="news_ttl">［FutureCode］サービスリリース</a>
             </li>
             <li>
               <span class="news_date">〇〇〇〇.〇〇.〇〇</span>
               <p class="news_category">TOPICS</p>
-              <a href="#" class="news_ttl">［WithCode］サービスリリース</a>
+              <a href="#" class="news_ttl">［FutureCode］サービスリリース</a>
             </li>
             <li>
               <span class="news_date">〇〇〇〇.〇〇.〇〇</span>
               <p class="news_category">TOPICS</p>
-              <a href="#" class="news_ttl">［WithCode］サービスリリース</a>
+              <a href="#" class="news_ttl">［FutureCode］サービスリリース</a>
             </li>
             <li>
               <span class="news_date">〇〇〇〇.〇〇.〇〇</span>
               <p class="news_category">TOPICS</p>
-              <a href="#" class="news_ttl">［WithCode］サービスリリース</a>
+              <a href="#" class="news_ttl">［FutureCode］サービスリリース</a>
             </li>
           </ul>
         </div>
@@ -72,9 +72,9 @@
         <div class="news_side_link">
           <p>最近の記事</p>
           <ul class="news_side_list">
-            <li><a href="#">［WithCode］サービスリリース</a></li>
-            <li><a href="#">［WithCode］サービスリリース</a></li>
-            <li><a href="#">［WithCode］サービスリリース</a></li>
+            <li><a href="#">［FutureCode］サービスリリース</a></li>
+            <li><a href="#">［FutureCode］サービスリリース</a></li>
+            <li><a href="#">［FutureCode］サービスリリース</a></li>
           </ul>
         </div>
         <div class="news_side_link">
@@ -127,6 +127,6 @@
       </div>
     </div>
   </footer>
-  <p class="copyright">© 2021 WithCode+</p>
+  <p class="copyright">© 2021 FutureCode+</p>
 </body>
 </html>
