--- a/html/recruit.html
+++ b/html/recruit.html
@@ -58,13 +58,13 @@
              <h2>求める人材<br><small>Human resources</small></h2>
              <h3>社会を先導する人材を求めています。</h3>
               <p>
-              これからの社会はIT化がより加速度的に進んでいく。そんな時代の潮流の中で、社会を引っ張っていくITのプロフェッショナルになって欲しい。そして、WithCodeで日本社会だけでなく世界を刷新したいという大きな野望を持つ方々と共に一緒に働けることを楽しみにしています。
+              これからの社会はIT化がより加速度的に進んでいく。そんな時代の潮流の中で、社会を引っ張っていくITのプロフェッショナルになって欲しい。そして、FutureCodeで日本社会だけでなく世界を刷新したいという大きな野望を持つ方々と共に一緒に働けることを楽しみにしています。
              </p>
            </div>
            <div class="recruit_bg">
              <div class="recruit_content">
                <div class="recruit_element">
-                 <p>WithCode</p>
+                 <p>FutureCode</p>
                </div>
              </div>
            </div>
@@ -200,7 +200,7 @@
        </div>
      </div>
    </footer>
-    <p class="copyright">© 2021 WithCode+</p>
+    <p class="copyright">© 2021 FutureCode+</p>
  </body>
 
 </html>
