--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <section class="feature section">
         <div class="feature_inner">
           <h4>Features</h4>
-          <small>WithCodeの特徴</small>
+          <small>FutureCodeの特徴</small>
           <p>
-            WithCodeは、プログラミング学習者がスキル向上を目指すべく創設されたコミュニティです。多くの優秀な現役エンジニアをメンターとして迎え入れましたので、日々の学習の中で生じた疑問/質問を気軽に相談できる環境を提供します。また、週に一度の勉強会や、メンバー同士の交流を促す企画なども多数ご用意しております。
+            FutureCodeは、プログラミング学習者がスキル向上を目指すべく創設されたコミュニティです。多くの優秀な現役エンジニアをメンターとして迎え入れましたので、日々の学習の中で生じた疑問/質問を気軽に相談できる環境を提供します。また、週に一度の勉強会や、メンバー同士の交流を促す企画なども多数ご用意しております。
           </p>
         </div>
         <div class="feature_bg">
@@ -87,7 +87,7 @@
            <h4>質問対応</h4>
            <small>Question response</small>
            <p>
-             WithCodeではIT業界の第一線で活躍しているエンジニアを揃えております。元プログラミングスクールのメンターや、フリーランスエンジニア、IT ベンチャーの現役エンジニアなど、学習者が抱える様々な質問/疑問に回答できるような最高の環境を皆さんに提供します。
+             FutureCodeではIT業界の第一線で活躍しているエンジニアを揃えております。元プログラミングスクールのメンターや、フリーランスエンジニア、IT ベンチャーの現役エンジニアなど、学習者が抱える様々な質問/疑問に回答できるような最高の環境を皆さんに提供します。
            </p>
          </div>
          <div class="service_item">
@@ -95,7 +95,7 @@
            <h4>質問対応</h4>
            <small>Question response</small>
            <p>
-             WithCodeではIT業界の第一線で活躍しているエンジニアを揃えております。元プログラミングスクールのメンターや、フリーランスエンジニア、ITベンチャーの現役エンジニアなど、学習者が抱える様々な質問/疑問に回答できるような最高の環境を皆さんに提供します。
+             FutureCodeではIT業界の第一線で活躍しているエンジニアを揃えております。元プログラミングスクールのメンターや、フリーランスエンジニア、ITベンチャーの現役エンジニアなど、学習者が抱える様々な質問/疑問に回答できるような最高の環境を皆さんに提供します。
            </p>
          </div>
          <div class="service_item">
@@ -103,7 +103,7 @@
            <h4>質問対応</h4>
            <small>Question response</small>
            <p>
-             WithCodeではIT業界の第一線で活躍しているエンジニアを揃えております。元プログラミングスクールのメンターや、フリーランスエンジニア、IT ベンチャーの現役エンジニアなど、学習者が抱える様々な質問/疑問に回答できるような最高の環境を皆さんに提供します。
+            FutureCodeではIT業界の第一線で活躍しているエンジニアを揃えております。元プログラミングスクールのメンターや、フリーランスエンジニア、IT ベンチャーの現役エンジニアなど、学習者が抱える様々な質問/疑問に回答できるような最高の環境を皆さんに提供します。
            </p>
          </div>
          <p class="btn"><a href="html/business.html">事業内容</a></p>
@@ -155,7 +155,7 @@
         </div>
       </div>
     </footer>
-    <p class="copyright">© 2021 WithCode+</p>
+    <p class="copyright">© 2021 FutureCode+</p>
   </body>
 
 </html>
